--- a/static/slides/shinydev001.Rmd
+++ b/static/slides/shinydev001.Rmd
@@ -24,25 +24,6 @@ library(icon)
 footer_gen <- function(text = "community.rstudio.com", footer_class = "my-footer") {
   glue::glue('<div class="{footer_class}"><span>{text}</span></div>')
 }
-
-# footer_spacing <- function(left_spaces = 20, 
-#                            right_spaces = 8,
-#                            center_title = "Episode 0: Launch!",
-#                            left_title = "Shiny Developer Series",
-#                            right_title = "shinydevseries.com", 
-#                            footer_class = "my-footer") {
-#   
-#   footer_content <- paste0(left_title, 
-#                            paste(rep("&emsp", left_spaces), collapse=";"), 
-#                            ";", 
-#                            center_title, 
-#                            paste(rep("&emsp", right_spaces), collapse=";"),  
-#                            ";", 
-#                            right_title)
-#   
-#   glue::glue('<div class="{footer_class}"><span>{footer_content}</span></div>')
-# }
-
 ```
 
 layout: true
@@ -92,169 +73,46 @@ Winston Chang is a software engineer at RStudio, and is a developer for the Shin
 
 ---
 class: inverse, center, top
-background-image: url(img/shinydevcon_pic.jpg)
+background-image: url(img/bridge_picture.jpg)
 background-size: cover
 
-# ShinyDevCon (2016)
+# Journey to Production
 
 ---
-class: inverse, center, bottom
-background-image: url(img/rpharma_pic.jpeg)
-background-size: cover
+class: center, top
 
-## [rpodcast.gitlab.io/rpharma2018/](http://rpodcast.gitlab.io/rpharma2018/)
-
-
----
-class: inverse, center, top
-background-image: url(img/rsconf2019_crowd.jpeg)
-background-size: cover
-
-# `rstudio::conf(2019L)`
-
----
+# Design Principles
 
 .pull-left[
-<blockquote class="twitter-tweet" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">A fantastic talk on the why and how of <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> shiny modules by <a href="https://twitter.com/theRcast?ref_src=twsrc%5Etfw">@theRcast</a> Modules are absolutely essential to scaling your app efficiently and making it easy to reason about.  <a href="https://t.co/XJCBOzN9b9">https://t.co/XJCBOzN9b9</a> <a href="https://twitter.com/hashtag/rstudioconf?src=hash&amp;ref_src=twsrc%5Etfw">#rstudioconf</a> <a href="https://t.co/Ly3zzqSiDc">pic.twitter.com/Ly3zzqSiDc</a></p>&mdash; Nick Strayer (@NicholasStrayer) <a href="https://twitter.com/NicholasStrayer/status/1086344823932706816?ref_src=twsrc%5Etfw">January 18, 2019</a></blockquote>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
+![:scale 80%](img/lego-blocks-vector-clipart.png)
 ]
 
 .pull-right[
-
-.center[
-![](img/rsconf2019_modules_slide.jpeg)
-[rpodcast.github.io/rsconf-2019](https://rpodcast.github.io/rsconf-2019)
-]
-]
-
-.center[
-## Ames Housing Explorer: [gallery.shinyapps.io/ames-explorer/](https://gallery.shinyapps.io/ames-explorer/)
+![](img/lego_med_difficulty.jpg)
 ]
 
 ---
 class: inverse, center, top
-background-image: url(img/chirunconf_pic.jpg)
+background-image: url(img/horizon.jpg)
 background-size: cover
 
-# Chicago R Unconference (2019)
+# Looking Ahead
+
+---
+class: inverse, center, top
+background-image: url(img/audience.png)
+background-size: contain
+
+# Questions?
 
 ---
 
-.pull-left[
-<blockquote class="twitter-tweet" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">spent the last couple of days at <a href="https://twitter.com/hashtag/chirunconf?src=hash&amp;ref_src=twsrc%5Etfw">#chirunconf</a> building a totally 🔥 (if i do say so myself) shiny app with <a href="https://twitter.com/theRcast?ref_src=twsrc%5Etfw">@theRcast</a>, designed to help see available issues (and celebrate closed ones!) in an <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> unconference setting. comes with a default repo, but you can add others! <a href="https://t.co/9Md7V3OUcQ">pic.twitter.com/9Md7V3OUcQ</a></p>&mdash; Sharla Gelfand (@sharlagelfand) <a href="https://twitter.com/sharlagelfand/status/1104956277413867520?ref_src=twsrc%5Etfw">March 11, 2019</a></blockquote>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-]
+# Stay Tuned!
 
-.pull-right[
+Keep watching [community.rstudio.com](https://community.rstudio.com) for the next __Shiny Developer Series__ webinars
+
+Recording of webinars along with additional content will be posted on [shinydevseries.com](https://shinydevseries.com)
 
 .center[
-![](img/chirunconf_app.gif)
-[rpodcast.shinyapps.io/unconfissues](https://rpodcast.shinyapps.io/unconfissues/)
+![:scale 80%](img/website_screenshot.png)
 ]
-]
-
-.center[
-## [github.com/unconf-toolbox/unconfissues](https://github.com/unconf-toolbox/unconfissues)
-]
-
----
-# Learning the Shiny Basics
-
-.left-column-big[
-
-I recommend the following resources to help you begin to climb the [__shiny ladder of enlightenment__](https://github.com/rstudio/ShinyDeveloperConference/blob/master/Reactivity/slides.Rmd#ladder-of-enlightenment):
-
-* Webinars/conference presentations from RStudio:
-    + [Effective Reactive Programming](https://www.rstudio.com/resources/videos/effective-reactive-programming/)
-    + [Debugging Techniques](https://www.rstudio.com/resources/videos/debugging-techniques/)
-* [Official Shiny documentation articles](https://shiny.rstudio.com/articles_)
-* [Building Shiny apps - an interactive tutorial](https://deanattali.com/blog/building-shiny-apps-tutorial/) (Dean Attali)
-* [A totally different, read-me-first Shiny tutorial](http://www.open-meta.org/technology/a-totally-different-read-me-first-shiny-tutorial/) (Tom Weishaar)
-]
-
-.right-column-small[
-.center[![:scale 80%](img/portablejim-Ladder-flat.svg)]
-]
-
----
-class: center, middle, inverse
-
-# Unlock the Shiny Possibilities
-
-![](https://media.giphy.com/media/50OAJNulFBBrq/source.gif)
-
----
-
-.pull-left[
-
-![](img/demo_part1.gif)
-
-* [rpodcast.shinyapps.io/shinylego](https://rpodcast.shinyapps.io/shinylego)
-* [github.com/rpodcast/shinylego](https://github.com/rpodcast/shinylego)
-* See more on my [RStudio Community post](https://community.rstudio.com/t/shiny-contest-submission-the-shiny-lego-mosaic-creator/25648)
-
-]
-
-.pull-right[
-## Made possible by the shiny-verse
-
-  - [`shinyjs`](https://deanattali.com/shinyjs): Easily improve the user experience of your Shiny apps in seconds by [Dean Attali](https://deanattali.com/)
-  - [`bs4Dash`](https://rinterface.github.io/bs4Dash/index.html): Bootstrap 4 shinydashboard using AdminLTE3 by [David Granjon](https://twitter.com/divadnojnarg) (part of the [RinteRface](https://rinterface.com/) initiative)
-  - [`shinyWidgets`](https://dreamrs.github.io/shinyWidgets/index.html): Extend widgets available in Shiny by [Victor Perrier](https://twitter.com/_pvictorr) (part of the [dreamRs](https://www.dreamrs.fr/)
-    organization)
-  - [`shinycustomloader`](https://emitanaka.github.io/shinycustomloader/): Add a custom loader for R shiny by [Emi Tanaka](https://emitanaka.github.io/)
-  - [`DT`](https://rstudio.github.io/DT): R Interface to the jQuery Plug-in DataTables by [Yihui Xie](https://yihui.name/)
-  - [`golem`](https://github.com/ThinkR-open/golem/): A framework for building robust Shiny Apps by [Vincent Guyader](https://github.com/VincentGuyader) and [Colin Fay](http://colinfay.me/) (part of the [R Task Force](https://rtask.thinkr.fr/) at [ThinkR](https://thinkr.fr/))
-]
-
----
-
-# `glimpse(shinydevseries)`
-
---
-
-.pull-left[
-
-## [shinydevseries.com](https://shinydevseries.com)
-
-* Share techniques, snippets, and practical advice for using Shiny
-* Explore fascinating uses of Shiny in the `r fa_r_project()` community
-* Hands-on videos illustrating Shiny apps, packages, and concepts in action
-]
-
---
-
-.pull-right[
-
-![](img/rstudio_community.png)
-
-* Joint collaboration with Curtis Kephart (RStudio's community organizer) to host live webinars throughout 2019!
-* Interviews with members of the Shiny RStudio team along with package / application authors in the Shiny community
-* First webinar: April 27 (2019) with Shiny `r emo::ji("package")` co-author and RStudio software engineer [Winston Chang](https://github.com/wch)!
-]
-
-???
-
-* Colin's feedback: Not the beginner, not the super-advanced, but the "middle-experienced shiny developer"
-* Need pic similar to the road pic I used in my rstudio conf talk.
-    + https://openclipart.org/detail/15567/open-road
-    
-
----
-
-
-
-## The Journey Begins!
-
-.center[
-![](https://media.giphy.com/media/9S1E0FmPtMQCq1ZLaj/giphy.gif)
-]
-
-.center[
-.content-box-blue-centre[Webinar announcements at [community.rstudio.com](https://community.rstudio.com)]
-<br><br>
-.content-box-blue-centre[Visit [shinydevseries.com](https://shinydevseries.com) for all videos & resources!]
-]
-
-
