--- a/static/slides/shinydev003.Rmd
+++ b/static/slides/shinydev003.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Episode 3: `golem` and Effective Shiny Development Practices"
+title: "Episode 3: `googleAnalyticsR` and linking Shiny to complex APIs"
 subtitle: "Shiny Developer Series"
 author: "Eric Nantz <br> <a href='https://twitter.com/thercast'> <i class='fab  fa-twitter '></i>@thercast</a> <br> <a href='https://github.com/rpodcast'> <i class='fab  fa-github '></i>rpodcast</a> <br> <i class='fas  fa-microphone '></i>  <a href='https://r-podcast.org'>r-podcast.org</a><br>"
 date: "<br>Video available at <a href='https://shinydevseries.com'>shinydevseries.com</a>"
@@ -46,9 +46,9 @@ Shiny Developer Series
 ]
 ]
 
-## Episode 2: `{golem}` and Effective
-## Shiny Development Methods
-### Special Guest: Colin Fay
+## Episode 3: `{googleAnalyticsR}` and
+## Linking Shiny to Complex APIs
+### Special Guest: Mark Edmondson
 
 ---
 
@@ -57,42 +57,19 @@ Shiny Developer Series
 .pull-left[
 
 .large[
-Colin Fay is a data scientist & R hacker at ThinkR, an organization that offers tailor-made R training and consultancy for R projects.  Colin has developed numerous R packages related to Shiny and beyond, as well as authoring the [Building Big Shiny Apps - A Workflow](https://thinkr-open.github.io/building-shiny-apps-workflow/) online book.
+Mark Edmondson is a senior data scientist at IIH Nordic, a digital analytics agency providing analytical strategies, training, and digital marketing.  Mark has developed numerous packages linking R to many cloud APIs and services such as {googleAnalyticsR}.
 
-`r icon::fa("twitter")` [_ColinFay](https://twitter.com/_ColinFay)
+`r icon::fa("twitter")` [holomarked](https://twitter.com/holomarked)
 <br>
-`r icon::fa("github")` [ColinFay](https://github.com/ColinFay)
+`r icon::fa("github")` [MarkEdmondson1234](https://github.com/MarkEdmondson1234)
 ]
 ]
 
 .pull-right[
 
-![:scale 60%](https://thinkr.fr/wp-content/uploads/colin.jpg)
+![:scale 80%](img/mark_edmondson_pic.jpeg)
 
 ]
-
----
-class: inverse, center, top
-background-image: url(img/golem.png)
-background-size: contain
-
-# Uncovering Golem
-
----
-class: center, top
-background-size: contain
-background-image: url(img/)
-
-# Setting up for Success
-
-![:scale 45%](img/user-experience-memes-25.jpg)
-
----
-class: center, top
-background-image: url(img/perspective.jpg)
-background-size: cover
-
-# Another Perspective
 
 ---
 class: inverse, center, top
