fix: move shinylive testing post to draft

--- a/blog/2025-09-23-shinylive-test/index.qmd
+++ b/blog/2025-09-23-shinylive-test/index.qmd
@@ -8,6 +8,7 @@ categories:
 subtitle: |
   I hope this works!
 description: ''
+draft: true
 ---
 
 This is a test of embedding a Shiny app using `{roxy.shinylive}`. Does this work?
